# python-mock

./: .flake8  .gitignore  .pre-commit-config.yaml  pyproject.toml  pytest.ini
python_mock/where_to_patch/complicate/individual_import/province/: area_service.py  population_summary_service.py
python_mock/where_to_patch/complicate/module_import/province/: population_service.py  population_summary_service.py
python_mock/where_to_patch/individual_import/province/: population_service.py  population_summary_service.py
python_mock/where_to_patch/module_import/province/: area_service.py  population_summary_service.py
python_mock/where_to_patch/simple/: computation.py  magic_number.py
slides/: README.md  package.json  slides.md
slides/pages/: 00_cover.md  01_table_of_content.md  02_what_is_mocking.md  03_python_mocking.md  04_where_to_patch.md  05_patching.md  06_mock_class.md  07_debugging.md  08_limitation_of_mock.md  08_speccing.md  09_resources.md  10_libraries.md  10_resources.md
tests/: test_mock_demo.py  test_python_mock.py
tests/where_to_patch/complicate/individual_import/province/: test_area_service.py  test_population_summary_service.py
tests/where_to_patch/complicate/module_import/province/: test_area_service.py  test_population_summary_service.py
tests/where_to_patch/individual_import/province/: test_area_service.py  test_population_summary_service.py
tests/where_to_patch/module_import/province/: test_area_service.py  test_population_summary_service.py
tests/where_to_patch/simple/: test_computation.py
