[tool.poetry]
name = "python-mock"
version = "0.1.0"
description = ""
authors = ["Khemmatat Theanvanichpant <khemmatat.thean@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
