[tool.poetry]
name = "python-mock"
version = "0.1.0"
description = ""
authors = ["Khemmatat Theanvanichpant <khemmatat.thean@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
# Reference https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-format
line-length = 120
target-version = ["py39"]

[tool.isort]
# Reference https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#isort
profile = "black"
